# archivist

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json.example  docker-compose.yml
src/: config.rs  main.rs  wallabag.rs
