[package]
name = "archivist"
version = "0.1.0"
edition = "2021"
description = "A Discord bot to easily send URLs from Discord to Wallabag"
license = "MIT"

[dependencies]
log = "0.4.22"
poise = "0.6.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
